[package]
name = "Websockets_Rust_Chat"
version = "0.1.0"
edition = "2021"

default-run = "server"

[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
actix-web="4"  
actix-web-actors="4" 
actix = "0.13" # actors
uuid = { version = "1", features = ["v4", "serde"] }
bytestring = "1"
log = "0.4"
env_logger = "0.9"

#client 
awc = "3.0.0-beta.21"
actix-http = "3"
tokio = { version = "1.13.1", features = ["full"] }
futures-util = "0.3"
bytes = "1"
futures = "0.3"
tokio-stream = "0.1"
actix-codec = "0.5"